--- a/style.scss
+++ b/style.scss
@@ -49,16 +49,18 @@ h1 {
   font-size: 30px;
   a {
     color: inherit;
-    text-colour: 2px 2px blue;
+    text-colour: 30px 30px blue;
   }
 }
 
 h2 {
   font-size: 24px;
+  text-shadow: 24px 24px blue;
 }
 
 h3 {
   font-size: 20px;
+  text-size: 20px 20px blue;
 }
 
 h4 {
