--- a/style.scss
+++ b/style.scss
@@ -49,18 +49,18 @@ h1 {
   font-size: 30px;
   a {
     color: inherit;
-    text-colour: 30px 30px blue;
+    text-shadow: 30px 30px #3366cc;
   }
 }
 
 h2 {
   font-size: 24px;
-  text-shadow: 24px 24px blue;
+  text-shadow: 24px 24px #3366cc;
 }
 
 h3 {
   font-size: 20px;
-  text-size: 20px 20px blue;
+  text-size: 20px 20px #3366cc;
 }
 
 h4 {
