--- a/style.scss
+++ b/style.scss
@@ -18,8 +18,8 @@ html {
 }
 
 body {
-	background: #ff0000
-		;
+	background-image: https://images-na.ssl-images-amazon.com/images/I/51-p2P5SPpL._SX355_.jpg;
+		
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
