--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: ("https://www.google.co.uk/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjVkZjl6brdAhWCzYUKHXp1BV0QjRx6BAgBEAU&url=https%3A%2F%2Fgiphy.com%2Fexplore%2Fplatypus&psig=AOvVaw3ShUirvmbMd_FucNRmT2_d&ust=1537025887983171");
+	background-image: url("https://www.google.co.uk/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjVkZjl6brdAhWCzYUKHXp1BV0QjRx6BAgBEAU&url=https%3A%2F%2Fgiphy.com%2Fexplore%2Fplatypus&psig=AOvVaw3ShUirvmbMd_FucNRmT2_d&ust=1537025887983171");
 		
   font: 18px/1.4 $helvetica;
   color: $darkGray;
