--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: url("https://www.google.co.uk/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjVkZjl6brdAhWCzYUKHXp1BV0QjRx6BAgBEAU&url=https%3A%2F%2Fgiphy.com%2Fexplore%2Fplatypus&psig=AOvVaw3ShUirvmbMd_FucNRmT2_d&ust=1537025887983171");
+	background-image: url("https://www.google.co.uk/imgres?imgurl=http%3A%2F%2Fwww.lagassegallery.com%2Fgalleries%2F1525%2F1525_.jpg&imgrefurl=http%3A%2F%2Fwww.lagassegallery.com%2Fgalleries%2F1525%2F1525.htm&docid=SeL-YScYe1PqyM&tbnid=M49DQTK0BS5GVM%3A&vet=10ahUKEwjw0aD56rrdAhXMD8AKHWgUAb0QMwjIASgBMAE..i&w=595&h=403&bih=878&biw=1280&q=cool%20abstract%20art&ved=0ahUKEwjw0aD56rrdAhXMD8AKHWgUAb0QMwjIASgBMAE&iact=mrc&uact=8");
 		
   font: 18px/1.4 $helvetica;
   color: $darkGray;
