--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: url("https://www.google.co.uk/imgres?imgurl=http%3A%2F%2Fwww.lagassegallery.com%2Fgalleries%2F1525%2F1525_.jpg&imgrefurl=http%3A%2F%2Fwww.lagassegallery.com%2Fgalleries%2F1525%2F1525.htm&docid=SeL-YScYe1PqyM&tbnid=M49DQTK0BS5GVM%3A&vet=10ahUKEwjw0aD56rrdAhXMD8AKHWgUAb0QMwjIASgBMAE..i&w=595&h=403&bih=878&biw=1280&q=cool%20abstract%20art&ved=0ahUKEwjw0aD56rrdAhXMD8AKHWgUAb0QMwjIASgBMAE&iact=mrc&uact=8");
+	background-image: linear-gradient(red, yellow);
 		
   font: 18px/1.4 $helvetica;
   color: $darkGray;
