--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: linear-gradient(red, yellow);
+	background-image: linear-gradient(rgb(255, 255, 0), rgb(255, 0, 0));
 		
   font: 18px/1.4 $helvetica;
   color: $darkGray;
