--- a/style.scss
+++ b/style.scss
@@ -30,7 +30,13 @@ body {
   padding: 0 10px;
   width: 100%;
 }
-
+table {
+    width: 100%;
+}
+th {
+  height: 50%;
+}
+	
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   color: $darkerGray;
