--- a/style.scss
+++ b/style.scss
@@ -38,7 +38,7 @@ th {
 }
 	
 h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
+  font-family: $serif;
   color: $darkerGray;
   font-weight: bold;
 
