--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
 	background-image: linear-gradient(rgb(255, 255, 0), rgb(255, 0, 0));
-	background-repeat: no-repeat;
+	background-repeat: repeat;
 		
   font: 18px/1.4 $helvetica;
   color: $darkGray;
